# spacestatus

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  json.h  open.xpm  spacestatus.c
doc/: Makefile.am  spacestatus.1.in
share/: closed.xpm  pending.xpm
src/: Makefile.am  json.c  json.h  spacestatus.c
